test/visibility/import/rename/same_name_in_mod2.good
same_name_in_mod2.chpl:4: In module 'User':
same_name_in_mod2.chpl:7: error: 'F' has multiple definitions
same_name_in_mod2.chpl:5: note: redefined through the 'import' statement here
same_name_in_mod2.chpl:1: note: leading to the definition here
